--- a/views/task/create.html
+++ b/views/task/create.html
@@ -10,13 +10,7 @@
 			<div class="col-sm-3">
 				<div class="radio-inline">
 					<label>
-						<input type="radio" name="ver_type" id="ver_type" value="1" checked>
-						差异版本
-					</label>
-				</div>
-				<div class="radio-inline">
-					<label>
-						<input type="radio" name="ver_type" id="ver_type" value="2">
+						<input type="radio" name="ver_type" id="ver_type" value="1" checked="true">
 						全量版本
 					</label>
 				</div>
@@ -25,17 +19,15 @@
 	
 		<div class="form-group" id="group_start_ver">
 			<label for="start_ver" class="col-sm-2 control-label">起始版本</label>
-			<div class="col-sm-3">
-				<select name="start_ver" class="form-control" disabled>
-				</select>
+                        <div class="col-sm-3">
+                                <input type="text" class="form-control" id="start_ver" name="start_ver">
 			</div>
 		</div>
 		
 		<div class="form-group">
 			<label for="end_ver" class="col-sm-2 control-label">结束版本</label>
 			<div class="col-sm-3">
-				<select name="end_ver" class="form-control" disabled>
-				</select>
+                                <input type="text" class="form-control" id="end_ver" name="end_ver" checked="true">
 			</div>
 		</div>
 		
@@ -105,13 +97,16 @@ jQuery(function($){
 		]
 	}).prev().addClass('wysiwyg-style2');
 	
+        /*
 	$.getJSON("{{urlfor "TaskController.GetTags"}}", {project_id: {{.projectId}}}, function (out) {
 		$("select[name='start_ver'],select[name='end_ver']").attr('disabled', false);
 		for (v in out.list) {
 			$("select[name='start_ver'],select[name='end_ver']").append('<option value="'+out.list[v]+'">'+out.list[v]+'</option>');
 		}
 	});
+        */
 	
+        /*
 	$(":radio[name='ver_type']").click(function () {
 		if ($(this).val() == 2) {
 			$('#group_start_ver').hide();
@@ -119,5 +114,7 @@ jQuery(function($){
 			$('#group_start_ver').show();
 		}
 	});
+        */
+        $('#group_start_ver').hide();
 });
 </script>
