修改了一些调用

--- a/views/main/index.html
+++ b/views/main/index.html
@@ -206,7 +206,8 @@
 						</li>
 
 						<li class="item-pink clearfix ui-sortable-handle">
-							程序作者：<a href="https://github.com/lisijie" target="_blank">李思杰（Jesse.Li）</a>，特别鸣谢：黄忠信（Muses）
+                                                <span class="menu-icon fa fa-github"></span>
+							<a href="https://github.com/zhenzhongfu" target="_blank">github</a>
 						</li>
 					</ul>
 				</div><!-- /.widget-main -->
