--- a/views/main/login.html
+++ b/views/main/login.html
@@ -84,7 +84,7 @@
 								</div><!-- /.widget-main -->
 
 								<div class="toolbar clearfix">
-									<div class="center">&copy; www.lisijie.org</div>
+									<div class="center">&copy; www.zhenzhongfu.org</div>
 								</div>
 							</div><!-- /.widget-body -->
 						</div><!-- /.login-box -->
